--- a/sonichq/emuzone/cartoon/SatAM/downloads.html
+++ b/sonichq/emuzone/cartoon/SatAM/downloads.html
@@ -15,7 +15,7 @@ function displayWindow(url, width, height) {
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#ffcc00" VLINK="#ffcc00" ALINK="#33cc66" 
-background="http://www.emulationzone.org/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed>
+background="/sonichq/emuzone/cartoon/images/negaback3.jpg" bgproperties=fixed>
 
 <p><!table align=right width="15%" bgcolor="#000000" border=1 bordercolorlight="blue" bordercolordark="blue">
 <table align=right width="15%" bgcolor="#000000" border=1 bordercolorlight="red" bordercolordark="#ff0000">
@@ -40,8 +40,8 @@ you will need a Real Player or an AVI player. Links to the specific areas to get
 Thanks!
 
 <p>
-<CENTER><A HREF="http://www.real.com/R/HPnav-1R/www.real.com/products/player/index.html?src=hp_butn,home&hp=yes"><IMG SRC="http://images.real.com/pics/general/freeplayer_g2.gif" ALT="Get the RealPlayer" WIDTH="88" HEIGHT="32" BORDER="0"></A><BR>
-<FONT SIZE=1><A HREF="http://www.real.com/R/HPnav-2R/www.real.com/products/player/index.html?src=hp_butn,home&hp=yes"><B>Free Download</B></A></FONT><P>
+<CENTER><A HREF="https://web.archive.org/20011101000000/http://www.real.com/R/HPnav-1R/www.real.com/products/player/index.html?src=hp_butn,home&hp=yes"><IMG SRC="https://web.archive.org/20011101000000/http://images.real.com/pics/general/freeplayer_g2.gif" ALT="Get the RealPlayer" WIDTH="88" HEIGHT="32" BORDER="0"></A><BR>
+<FONT SIZE=1><A HREF="https://web.archive.org/20011101000000/http://www.real.com/R/HPnav-2R/www.real.com/products/player/index.html?src=hp_butn,home&hp=yes"><B>Free Download</B></A></FONT><P>
 
 <p></td>
 <td>
@@ -50,7 +50,7 @@ Thanks!
 </tr>
 <tr>
 <td align=left width=30%>
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/title1.gif" 
+<img src="/sonichq/emuzone/cartoon/images/title1.gif" 
 alt="Sonic The Hedgehog">
 </td>
 <td VALIGN="top"> 
@@ -70,7 +70,7 @@ Just click on the title of the episode you want and viola - problem solved! Enjo
 
 <p>Note - All Real Audio files were encoded by Jonathan Lipscomb.
 
-<p>Also Note - Download space are courtisy of <a href="http://sonicsages.actionxtreme.com/" target="_blank">Sonic Sages</a>.
+<p>Also Note - Download space are courtisy of <a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/" target="_blank">Sonic Sages</a>.
 </td>
 </tr>
 </table>
@@ -85,7 +85,7 @@ Just click on the title of the episode you want and viola - problem solved! Enjo
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/sonintro.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/sonintro.avi" target="">
 <LI> Sonic The Hedgehog</a>
 
 </font></b></font></td>
@@ -114,7 +114,7 @@ Writer
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod13.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod13.ram" target="">
 <LI> Heads Or Tails (Pilot Ep)</a>
 
 </font></b></font></td>
@@ -130,7 +130,7 @@ Len Jansen
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod12.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod12.ram" target="">
 <LI> Sonic Past Cool</a>
 
 </font></b></font></td>
@@ -146,7 +146,7 @@ Kayte Kuch And Sheryl Scarborough
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod11.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod11.ram" target="">
 <LI> Sub Sonic</a>
 
 </font></b></font></td>
@@ -162,7 +162,7 @@ Barbara Slade
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod10.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod10.ram" target="">
 <LI> Warp Sonic</a>
 
 </font></b></font></td>
@@ -178,7 +178,7 @@ Matt Uitz
 <tr> 
 <td >
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod02.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod02.ram" target="">
 <LI> Sonic And Sally</a>
 
 </font></b></font></td>
@@ -194,7 +194,7 @@ Pat Allee And Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod03.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod03.ram" target="">
 <LI> Ultra Sonic</a>
 
 </font></b></font></td>
@@ -210,7 +210,7 @@ David Villiare
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod06.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod06.ram" target="">
 <LI> Sonic Racer</a>
 
 </font></b></font></td>
@@ -226,7 +226,7 @@ Len Jansen
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod07.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod07.ram" target="">
 <LI> Hooked On Sonics</a>
 
 </font></b></font></td>
@@ -242,7 +242,7 @@ Randy Rogel
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod08.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod08.ram" target="">
 <LI> Harmonic Sonic</a>
 
 </font></b></font></td>
@@ -258,7 +258,7 @@ David Villiare
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod09.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod09.ram" target="">
 <LI> Sonic's Nightmare</a>
 
 </font></b></font></td>
@@ -274,7 +274,7 @@ Frank Santopadre
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod01.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod01.ram" target="">
 <LI> Sonic Boom</a>
 
 </font></b></font></td>
@@ -290,7 +290,7 @@ Len Jansen
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod05.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod05.ram" target="">
 <LI> Super Sonic</a>
 
 </font></b></font></td>
@@ -306,7 +306,7 @@ Jules Dennis
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod04.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod04.ram" target="">
 <LI> Sonic And The Secret Scrolls</a>
 
 </font></b></font></td>
@@ -338,7 +338,7 @@ Writer
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod15.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod15.ram" target="">
 <LI> Game Guy</a>
 
 </font></b></font></td>
@@ -354,7 +354,7 @@ Pat Allee And Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod14.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod14.ram" target="">
 <LI> Sonic Conversion</a>
 
 </font></b></font></td>
@@ -370,7 +370,7 @@ Pat Allee And Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod16.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod16.ram" target="">
 <LI> No Brainer</a>
 
 </font></b></font></td>
@@ -386,7 +386,7 @@ Pat Allee
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod17.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod17.ram" target="">
 <LI> Blast To The Past - Part One</a>
 
 </font></b></font></td>
@@ -402,7 +402,7 @@ Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod18.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod18.ram" target="">
 <LI> Blast To The Past - Part Two</a>
 
 </font></b></font></td>
@@ -418,9 +418,9 @@ Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod19.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod19.ram" target="">
 <LI> Fed Up With Antione</a><br>
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod19.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod19.ram" target="">
 <LI> Ghost Busted</a><br>
 
 </font></b></font></td>
@@ -437,7 +437,7 @@ Pat Allee<br>
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod20.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod20.ram" target="">
 <LI> Dulcy</a>
 
 </font></b></font></td>
@@ -453,7 +453,7 @@ Pat Allee And Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod21.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod21.ram" target="">
 <LI> The Void</a>
 
 </font></b></font></td>
@@ -469,9 +469,9 @@ Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod22.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod22.ram" target="">
 <LI> The Odd Couple</a><br>
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod19.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod19.ram" target="">
 <LI> Ro-Becca</a><br>
 
 </font></b></font></td>
@@ -486,7 +486,7 @@ Pat Allee<br>
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod23.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod23.ram" target="">
 <LI> Cry Of The Wolf</a>
 
 </font></b></font></td>
@@ -502,7 +502,7 @@ Pat Allee
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod24.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod24.ram" target="">
 <LI> Drood Henge</a>
 
 </font></b></font></td>
@@ -518,7 +518,7 @@ Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod25.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod25.ram" target="">
 <LI> Spy Hog</a>
 
 </font></b></font></td>
@@ -534,7 +534,7 @@ Benjamin Hurst
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/episod26.ram" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/episod26.ram" target="">
 <LI> The Doomsday Project</a>
 
 </font></b></font></td>
@@ -556,7 +556,7 @@ Benjamin Hurst
 <table width="80%" bgcolor="#000000" border=1 bordercolorlight="blue" bordercolordark="blue">
 <tr>
 <td align=left width=30%>
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/thumbup.jpg" 
+<img src="/sonichq/emuzone/cartoon/images/thumbup.jpg" 
 alt="Adventures Of Sonic The Hedgehog">
 </td>
 <td VALIGN="top"> 
@@ -587,7 +587,7 @@ alt="Adventures Of Sonic The Hedgehog">
 
 <tr> 
 <td  bgcolor="blue"><b><font face="Arial, Helvetica, sans-serif" size="2">
-<A HREF="javascript:displayWindow('http://www.segasonic.net/aosth.htm',600,300)">AoSTH - SegaSonic.net Downloads</a>
+<A HREF="javascript:displayWindow('https://web.archive.org/20011101000000/http://www.segasonic.net/aosth.htm',600,300)">AoSTH - SegaSonic.net Downloads</a>
 </font></b></td>
 <td  bgcolor="blue"> 
 <div align="RIGHT">
@@ -610,7 +610,7 @@ www.segasonic.net
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/aosthintro.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/aosthintro.avi" target="">
 <LI>Adventures Of Sonic The Hedgehog</a>
 
 </font></b></font></td>
@@ -625,7 +625,7 @@ Opening Intro And Theme Song (AVI Format)
 
 <tr> 
 <td  bgcolor="blue"><b><font face="Arial, Helvetica, sans-serif" size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/safight1.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/safight1.avi" target="">
 Sonic Anime - Sonic VS Metal Sonic Fight Scene</a>
 </font></b></td>
 <td  bgcolor="blue"> 
@@ -648,7 +648,7 @@ General Entertainment Co. Ltd. (AVI Format)
 
 <tr> 
 <td  bgcolor="blue"><b><font face="Arial, Helvetica, sans-serif" size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/wbsonic.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/wbsonic.avi" target="">
 Sonic Jam Computer Anime</a>
 </font></b></td>
 <td  bgcolor="blue"> 
@@ -695,7 +695,7 @@ General Entertainment Co. Ltd. (AVI Format)
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/pencil.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/pencil.avi" target="">
 <LI> Pencil Test</a>
 
 </font></b></font></td>
@@ -711,7 +711,7 @@ Animators Unknown
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/open.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/open.avi" target="">
 <LI> Opening Scene</a>
 
 </font></b></font></td>
@@ -727,7 +727,7 @@ Animators Unknown
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/goodend1.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/goodend1.avi" target="">
 <LI> Good Ending 1</a>
 
 </font></b></font></td>
@@ -743,7 +743,7 @@ Animators Unknown
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/goodend2.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/goodend2.avi" target="">
 <LI> Good Ending 2</a>
 
 </font></b></font></td>
@@ -759,7 +759,7 @@ Animators Unknown
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/badend1.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/badend1.avi" target="">
 <LI> Bad Ending 1</a>
 
 </font></b></font></td>
@@ -775,7 +775,7 @@ Animators Unknown
 <tr> 
 <td>
 <font face="Arial, Helvetica, sans-serif"><b><font size="2">
-<a href="http://sonicsages.actionxtreme.com/cartoons/badend1.avi" target="">
+<a href="https://web.archive.org/20011101000000/http://sonicsages.actionxtreme.com/cartoons/badend1.avi" target="">
 <LI> Bad Ending 2</a>
 
 </font></b></font></td>
