--- a/sonichq/emuzone/cartoon/Sonicug/Sonicug.htm
+++ b/sonichq/emuzone/cartoon/Sonicug/Sonicug.htm
@@ -3,7 +3,7 @@
 <title>Sonic Cartoons</title>
 </header>
 
-<body bgcolor="#00005a" background="http://www.emulationzone.org/sonichq/images/bg.gif"
+<body bgcolor="#00005a" background="/sonichq/emuzone/images/bg.gif"
  text="4B1FFC" link="orange" vlink="red">
 
 
@@ -13,7 +13,7 @@
 <tr>
 <td>
 <center>
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/Sonicug.jpg" align=left alt="Sonic Cartoons Logo">
+<img src="/sonichq/emuzone/cartoon/images/Sonicug.jpg" align=left alt="Sonic Cartoons Logo">
 </center>
 </td>
 <td>
@@ -70,7 +70,7 @@ Sleet and Dingo are two Bounty Hunters working for Robotnik (a wolf and a jackal
 <tr><td width="100%">
 <font color="blue"><font face="arial"><font size="-2">
 <font color="orange">The Rumours</font>
-<p>So far, it hasn't been revealed when or on which channels the new "Sonic Underground" cartoon series will be aired, but according to rumors it will start in September. It is also said that one of the first stations to carry it is the <a href="http://www.foxnetwork.com/" style=text-decoration:none>FOX Network</a>. 
+<p>So far, it hasn't been revealed when or on which channels the new "Sonic Underground" cartoon series will be aired, but according to rumors it will start in September. It is also said that one of the first stations to carry it is the <a href="https://web.archive.org/20011101000000/http://www.foxnetwork.com/" style=text-decoration:none>FOX Network</a>. 
 <p>There is also a rumor that Knuckles will have an appearence in the new cartoon as an one-shot character, although this is unconfirmed. 
 <p>Sega of America might make a game out of this cartoon (Oh no!).
 </font></font></font>
