--- a/sonichq/emuzone/cartoon/peekaboo.htm
+++ b/sonichq/emuzone/cartoon/peekaboo.htm
@@ -5,7 +5,7 @@
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#FFCC33" LINK="#cc3300" VLINK="#cc3300" ALINK="#33cc66" 
-background="http://www.emulationzone.org/sonichq/images/backgrounds/leaves.jpg" bgproperties=fixed>
+background="/sonichq/emuzone/images/backgrounds/leaves.jpg" bgproperties=fixed>
 <embed src="Goemon5f[1].mid" 
 autostart="true" hidden="true" loop="true">
 
@@ -26,7 +26,7 @@ autostart="true" hidden="true" loop="true">
 </table>
 
 <center><p><font face="Beesknees ITC" size=+2 color=green>The NEW Sonic HQ</font>
-<br><IMG SRC=http://www.emulationzone.org/sonichq/cartoon/images/carlog.jpg align=center>
+<br><IMG SRC=/sonichq/emuzone/cartoon/images/carlog.jpg align=center>
 
 <br>
 <br>
