--- a/sonichq/emuzone/cartoon/quicklist.html
+++ b/sonichq/emuzone/cartoon/quicklist.html
@@ -5,11 +5,11 @@
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#ffcc00" VLINK="#ffcc00" ALINK="#33cc66" 
-background="http://www.emulationzone.org/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed>
+background="/sonichq/emuzone/cartoon/images/negaback3.jpg" bgproperties=fixed>
 
 <DL>
    <DT><CENTER><FONT COLOR="#0000AF">
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/toon.jpg" 
+<img src="/sonichq/emuzone/cartoon/images/toon.jpg" 
 alt="Sonic The Hedgehog: Quick List Episode Guide"></FONT></CENTER>
    
    <DT><CENTER><B><TT><FONT SIZE="2" FACE="Arial"
@@ -20,10 +20,10 @@ alt="Sonic The Hedgehog: Quick List Episode Guide"></FONT></CENTER>
 <p><center>
 <u>Originally Primiered As:<br></u>
 <br>
-<A HREF="http://www.emulationzone.org/sonichq/cartoon/quicklist.html#sonicsatam">Sonic The Hedgehog (1993-1995)<br></a>
-<A HREF="http://www.emulationzone.org/sonichq/cartoon/quicklist.html#adventures">Adventures Of Sonic The Hedgehog (1993-1995)<br></a>
-<A HREF="http://www.emulationzone.org/sonichq/cartoon/quicklist.html#anime">Sonic The Anime* (1995 -Japan, 1999 - America)<br></a>
-<A HREF="http://www.emulationzone.org/sonichq/cartoon/quicklist.html#underground">Sonic Underground (1999) <br></center></a>
+<A HREF="/sonichq/emuzone/cartoon/quicklist.html#sonicsatam">Sonic The Hedgehog (1993-1995)<br></a>
+<A HREF="/sonichq/emuzone/cartoon/quicklist.html#adventures">Adventures Of Sonic The Hedgehog (1993-1995)<br></a>
+<A HREF="/sonichq/emuzone/cartoon/quicklist.html#anime">Sonic The Anime* (1995 -Japan, 1999 - America)<br></a>
+<A HREF="/sonichq/emuzone/cartoon/quicklist.html#underground">Sonic Underground (1999) <br></center></a>
 </p>
 
 </b>
@@ -35,7 +35,7 @@ alt="Sonic The Hedgehog: Quick List Episode Guide"></FONT></CENTER>
 <table width="80%" bgcolor="#000000" border=1 bordercolorlight="red" bordercolordark="#ff0000">
 <tr>
 <td align=left width=30%>
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/title1.gif" 
+<img src="/sonichq/emuzone/cartoon/images/title1.gif" 
 alt="Sonic The Hedgehog">
 </td>
 <td VALIGN="top"> 
@@ -531,7 +531,7 @@ Benjamin Hurst
 <table width="80%" bgcolor="#000000" border=1 bordercolorlight="blue" bordercolordark="blue">
 <tr>
 <td align=left width=30%>
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/thumbup.jpg" 
+<img src="/sonichq/emuzone/cartoon/images/thumbup.jpg" 
 alt="Adventures Of Sonic The Hedgehog">
 </td>
 <td VALIGN="top"> 
@@ -1109,7 +1109,7 @@ Currently Playing: Toon Disney<br>
 <table width="80%" bgcolor="#000000" border=1 bordercolorlight="green" bordercolordark="green">
 <tr>
 <td align=left width=30%>
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/anime.jpg" 
+<img src="/sonichq/emuzone/cartoon/images/anime.jpg" 
 alt="Sonic The Hedgehog - The Anime">
 </td>
 <td VALIGN="top"> 
@@ -1173,7 +1173,7 @@ Currently Playing: Home Video And DVD<br>
 <table width="80%" bgcolor="#000000" border=1 bordercolorlight="brown" bordercolordark="brown">
 <tr>
 <td align=left width=30%>
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/underground.jpg" 
+<img src="/sonichq/emuzone/cartoon/images/underground.jpg" 
 alt="Sonic Underground">
 </td>
 <td VALIGN="top"> 
