--- a/sonichq/emuzone/menu3.htm
+++ b/sonichq/emuzone/menu3.htm
@@ -15,7 +15,7 @@
 <AREA SHAPE=RECT COORDS="324,32,395,44" HREF="cartoon/" TARGET="main">
 <AREA SHAPE=RECT COORDS="324,44,414,57" HREF="music/" TARGET="main">
 <AREA SHAPE=RECT COORDS="323,58,405,71" HREF="dir/" TARGET="main">
-<AREA SHAPE=RECT COORDS="416,0,495,12" HREF="http://disc.server.com/Indices/70464.html" TARGET="main">
+<AREA SHAPE=RECT COORDS="416,0,495,12" HREF="https://web.archive.org/20011101000000/http://disc.server.com/Indices/70464.html" TARGET="main">
 <AREA SHAPE=RECT COORDS="415,11,479,23" HREF="qa/" TARGET="main">
 <AREA SHAPE=RECT COORDS="417,22,467,33" HREF="features/" TARGET="main">
 <AREA SHAPE=RECT COORDS="415,32,479,45" HREF="images/" TARGET="main">
