--- a/sonichq/emuzone/cartoon/SatAM/lost3.html
+++ b/sonichq/emuzone/cartoon/SatAM/lost3.html
@@ -5,7 +5,7 @@
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#fffffff" VLINK="#fffffff" ALINK="#33cc66" 
-background="http://www.emulationzone.org/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed>
+background="/sonichq/emuzone/cartoon/images/negaback3.jpg" bgproperties=fixed>
 
 <p><!table width="100%" bgcolor="#000000" border=1 bordercolorlight="red" bordercolordark="#ff0000" ALIGN=CENTER>
 <table width="100%" bgcolor="#000000" border=1 bordercolorlight="red" bordercolordark="#ff0000" ALIGN=CENTER>
@@ -33,8 +33,8 @@ alt="Its So Hard To Say Goodbye...">
 </center>
 <p>
 <center>
-<A HREF=http://www.emulationzone.org/sonichq/cartoon/satam/saturday2.wav>
-<IMG SRC=http://www.emulationzone.org/sonichq/comics/archive/runani.gif nosave border=0></a>
+<A HREF=/sonichq/emuzone/cartoon/satam/saturday2.wav>
+<IMG SRC=/sonichq/emuzone/comics/archive/runani.gif nosave border=0></a>
 <br>Sonic The Hedgehog - Theme Song<br> <u>WAV File</u>: Click Animated Gif, Then Download<p>
 </font></center>
 
@@ -76,7 +76,7 @@ So what COULD have happened you ask? Keep reading...
 <td>&nbsp
 
 <!SECTIONS>
-<td valign=top background=http://www.emulationzone.org/sonichq/cartoon/images/negaback3.jpg>
+<td valign=top background=/sonichq/emuzone/cartoon/images/negaback3.jpg>
 <center></font face=arial><b>
 
 <!><A NAME="">
@@ -141,7 +141,7 @@ Sally into capture with the King as bait. Robotnik becomes Naugus' lackey. And S
 <tr><td>
 <b><center>Return To The SatAM Page?
 <br><A HREF=satam.html>
-<IMG SRC=http://www.emulationzone.org/sonichq/music/images/sonright.gif nosave border=0></center></b></a>
+<IMG SRC=/sonichq/emuzone/music/images/sonright.gif nosave border=0></center></b></a>
 </td></tr>
 </table>
 </table>
