--- a/sonichq/emuzone/cartoon/cartoon.htm
+++ b/sonichq/emuzone/cartoon/cartoon.htm
@@ -3,7 +3,7 @@
 <title>Sonic Cartoons</title>
 </header>
 
-<body bgcolor="#00005a" background="http://www.emulationzone.org/sonichq/images/bg.gif"
+<body bgcolor="#00005a" background="/sonichq/emuzone/images/bg.gif"
  text="4B1FFC" link="orange" vlink="red">
 
 
@@ -13,7 +13,7 @@
 <tr>
 <td>
 <center>
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/cartoontop.jpg" align=left alt="Sonic Cartoons Logo">
+<img src="/sonichq/emuzone/cartoon/images/cartoontop.jpg" align=left alt="Sonic Cartoons Logo">
 </center>
 </td>
 <td>
@@ -32,8 +32,8 @@
 <!table width="100%" bgcolor="#000000" border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark="#23238E">
 <table width="100%" bgcolor="#000000" border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark="#23238E">
 <tr><td width="100%">
-<font color="blue"><font face="arial"><font size="-2"><a href="http://www.emulationzone.org/sonichq/cartoon/Sonicug/Sonicug.htm">
-<img src="http://www.emulationzone.org/sonichq/cartoon/images/Sonicug.jpg" align="left" nosave border=0></a>Sonic Underground, the next Sonic the Hedgehog catoon series by DiC Productions. This cartoon looks promising in the graphic department, but its storyline is still in question. Sega is very excited about this cartoon. They might even make a game of it. This cartoon is called the "prequal" of all other Sonic cartoons.
+<font color="blue"><font face="arial"><font size="-2"><a href="/sonichq/emuzone/cartoon/Sonicug/Sonicug.htm">
+<img src="/sonichq/emuzone/cartoon/images/Sonicug.jpg" align="left" nosave border=0></a>Sonic Underground, the next Sonic the Hedgehog catoon series by DiC Productions. This cartoon looks promising in the graphic department, but its storyline is still in question. Sega is very excited about this cartoon. They might even make a game of it. This cartoon is called the "prequal" of all other Sonic cartoons.
 </font></font></font>
 </td></table>
 
@@ -41,7 +41,7 @@
 <!table width="100%" bgcolor="#000000" border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark="#23238E">
 <table width="100%" bgcolor="#000000" border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark="#23238E">
 <tr><td width="100%">
-<font color="blue"><font face="arial"><font size="-2"><a href="http://www.emulationzone.org/sonichq/cartoon/SatAM/satAM.htm"><img src="http://www.emulationzone.org/sonichq/cartoon/images/SonicsatAM.jpg" align="left" nosave border=0></a>This series created by DiC was on ABC Saturday mornings for two seasons, 1993-95. It was also in reruns on the USA cable network until recently. I have compiled summaries, pictures, and other various tidbits from this series. The absolute <i>best</i> of the Sonic cartoons!
+<font color="blue"><font face="arial"><font size="-2"><a href="/sonichq/emuzone/cartoon/SatAM/satAM.htm"><img src="/sonichq/emuzone/cartoon/images/SonicsatAM.jpg" align="left" nosave border=0></a>This series created by DiC was on ABC Saturday mornings for two seasons, 1993-95. It was also in reruns on the USA cable network until recently. I have compiled summaries, pictures, and other various tidbits from this series. The absolute <i>best</i> of the Sonic cartoons!
 </font></font></font>
 </td></table>
 
@@ -49,7 +49,7 @@
 <!table width="100%" bgcolor="#000000" border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark="#23238E">
 <table width="100%" bgcolor="#000000" border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark="#23238E">
 <tr><td width="100%">
-<font color="blue"><font face="arial"><font size="-2"><a href="http://www.emulationzone.org/sonichq/cartoon/AdvofS/Sonicadv.htm"><img src="http://www.emulationzone.org/sonichq/cartoon/images/Sonicadv.jpg" align="left" nosave border=0></a>Another DiC Productions release, this syndicated weekday series also started in 1993, and is still in reruns to this date. WB has the incredible 65-episode list, with some summaries about the comical cartoon!
+<font color="blue"><font face="arial"><font size="-2"><a href="/sonichq/emuzone/cartoon/AdvofS/Sonicadv.htm"><img src="/sonichq/emuzone/cartoon/images/Sonicadv.jpg" align="left" nosave border=0></a>Another DiC Productions release, this syndicated weekday series also started in 1993, and is still in reruns to this date. WB has the incredible 65-episode list, with some summaries about the comical cartoon!
 </font></font></font>
 </td></table>
 
@@ -57,18 +57,18 @@
 <!table width="100%" bgcolor="#000000" border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark="#23238E">
 <table width="100%" bgcolor="#000000" border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark="#23238E">
 <tr><td width="100%">
-<font color="blue"><font face="arial"><font size="-2"><img src="http://www.emulationzone.org/sonichq/cartoon/images/Sonicanime.jpg" align="left" nosave border=0>Sonic returns to his origins, as 2 cartoon episodes of Sonic were made in Japan. They're <i>very</i> hard to find. But there is one man who knows all about the anime: <font color="orange">Alessandro Sanasi</font>. Credit goes to him for giving all us Sonic fans a look at this classic. Note: rumor has it that there's another Sonic anime brewing in Japan.
+<font color="blue"><font face="arial"><font size="-2"><img src="/sonichq/emuzone/cartoon/images/Sonicanime.jpg" align="left" nosave border=0>Sonic returns to his origins, as 2 cartoon episodes of Sonic were made in Japan. They're <i>very</i> hard to find. But there is one man who knows all about the anime: <font color="orange">Alessandro Sanasi</font>. Credit goes to him for giving all us Sonic fans a look at this classic. Note: rumor has it that there's another Sonic anime brewing in Japan.
 </font></font></font>
 </td></table>
 
 <center><p>
 <!-- BEGIN FASTCOUNTER CODE -->
-<a href="http://member.linkexchange.com/cgi-bin/fc/fastcounter-login?1057722" target="_top">
-<img border="0" src="http://fastcounter.linkexchange.com/fastcounter?1057722+2115451"></a>
+<a href="https://web.archive.org/20011101000000/http://member.linkexchange.com/cgi-bin/fc/fastcounter-login?1057722" target="_top">
+<img border="0" src="https://web.archive.org/20011101000000/http://fastcounter.linkexchange.com/fastcounter?1057722+2115451"></a>
 <!-- END FASTCOUNTER CODE -->
 <br><font face="arial" size="-2" color="blue">hits since Apr 11, 1999.</font><br>
 <!-- BEGIN FASTCOUNTER LINK -->
-<font face="arial" size="1"><a href="http://fastcounter.linkexchange.com/fc-join" target="_top">FastCounter by LinkExchange</a>
+<font face="arial" size="1"><a href="https://web.archive.org/20011101000000/http://fastcounter.linkexchange.com/fc-join" target="_top">FastCounter by LinkExchange</a>
 </font><br>
 <!-- END FASTCOUNTER LINK -->
 </center>
