--- a/sonichq/emuzone/main.htm
+++ b/sonichq/emuzone/main.htm
@@ -15,8 +15,8 @@
 <center>
 
 <!-- BEGIN BURST CODE -->
-<a href="http://www2.burstnet.com/ads/ad1390f-map.cgi" target="whole">
-<align="center"><img src="http://www2.burstnet.com/cgi-bin/ads/ad1390f.cgi" ismap width="468" height=60 border="0" alt="Click Here"></a>
+<a href="https://web.archive.org/20011101000000/http://www2.burstnet.com/ads/ad1390f-map.cgi" target="whole">
+<align="center"><img src="https://web.archive.org/20011101000000/http://www2.burstnet.com/cgi-bin/ads/ad1390f.cgi" ismap width="468" height=60 border="0" alt="Click Here"></a>
 <!-- END BURST CODE -->
 
 <!main table top>
@@ -210,7 +210,7 @@ Got a question related to Sonic comics, cartoons, toys, games, or our site, ask!
 <td><font face=Arial size=-1>
 Come and join in the discussion of Sonic related stuff! Many people come here everyday, that's why posts stack up quickly. Controlled by <b>Lien</b>, <b>Vector</b>, <b>Troophead</b>, and <b>WB</b>.<p>
 
-<p><center>[<a href=http://disc.server.com/Indices/70464.html>Mobius Forum</a> | <a href=cgi-bin/bb/forumdisplay.cgi?action=topics&forum=Sonic+HQ+News+Forum&number=1&DaysPrune=&LastLogin=>News Forum</a> | <a href=store/sonicstore.htm>Trade Forum</a> | <a href=cgi-bin/bb/forumdisplay.cgi?action=topics&forum=Fan+Projects+Forum&number=2&DaysPrune=&LastLogin=>Fan Projects Forum</a> | <a href=forum/chat.htm>Chat</a>]</center>
+<p><center>[<a href=https://web.archive.org/20011101000000/http://disc.server.com/Indices/70464.html>Mobius Forum</a> | <a href=cgi-bin/bb/forumdisplay.cgi?action=topics&forum=Sonic+HQ+News+Forum&number=1&DaysPrune=&LastLogin=>News Forum</a> | <a href=store/sonicstore.htm>Trade Forum</a> | <a href=cgi-bin/bb/forumdisplay.cgi?action=topics&forum=Fan+Projects+Forum&number=2&DaysPrune=&LastLogin=>Fan Projects Forum</a> | <a href=forum/chat.htm>Chat</a>]</center>
 </font></td>
 <td WIDTH=2 BGCOLOR=B3B3B3>&nbsp;</td>
 </tr>
@@ -244,14 +244,14 @@ Want to visit other Sonic sites? Or maybe the official ones? Care to get in touc
 <center><u>April 7, 2000</u>
 <br><b>SHQ Event - Round Two!</b></center>
 
-<center><p><table border=0><tr><td><!-- Start of NedStat Basic code --> <a href="http://usa.nedstatbasic.net/cgi-bin/viewstat?name=shq" TARGET="_blank"><img src="http://usa.nedstatbasic.net/cgi-bin/nedstat.gif?name=shq" border=0 alt="" width=22 height=22></a> <!-- End of NedStat Basic code -->
+<center><p><table border=0><tr><td><!-- Start of NedStat Basic code --> <a href="https://web.archive.org/20011101000000/http://usa.nedstatbasic.net/cgi-bin/viewstat?name=shq" TARGET="_blank"><img src="https://web.archive.org/20011101000000/http://usa.nedstatbasic.net/cgi-bin/nedstat.gif?name=shq" border=0 alt="" width=22 height=22></a> <!-- End of NedStat Basic code -->
 <IMG SRC="counter/3.gif" WIDTH=15 HEIGHT=20 ALT="3"><IMG SRC="counter/9.gif" WIDTH=15 HEIGHT=20 ALT="9"><IMG SRC="counter/7.gif" WIDTH=15 HEIGHT=20 ALT="7"><IMG SRC="counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="counter/9.gif" WIDTH=15 HEIGHT=20 ALT="9"><IMG SRC="counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><br><font face="arial" size=-2 color=green>hits since Apr 11, 1998.</font></td>
 
-<td><p><a target="_top" href="http://y.extreme-dm.com/s/?tag=sonicheq" TARGET="_blank">
-<img name=im src="http://y0.extreme-dm.com/i/" height=38 border=0
+<td><p><a target="_top" href="https://web.archive.org/20011101000000/http://y.extreme-dm.com/s/?tag=sonicheq" TARGET="_blank">
+<img name=im src="https://web.archive.org/20011101000000/http://y0.extreme-dm.com/i/" height=38 border=0
 width=41 alt=""></a><script language="javascript"><!--
 an=navigator.appName;d=document;function
-pr(){d.write("<img src=\"http://y1.extreme-dm.com",
+pr(){d.write("<img src=\"https://web.archive.org/20011101000000/http://y1.extreme-dm.com",
 "/z/?tag=sonicheq&j=y&srw="+srw+"&srb="+srb+"&",
 "rs="+r+"&l="+escape(d.referrer)+"\" height=1 ",
 "width=1>");}srb="na";srw="na";//-->
@@ -261,15 +261,15 @@ srb=s.colorDepth:srb=s.pixelDepth;//-->
 </script><script language="javascript"><!--
 r=41;d.images?r=d.im.width:z=0;pr();//-->
 </script><noscript><img height=1 width=1 alt="" 
-src="http://y1.extreme-dm.com/z/?tag=sonicheq&j=n"></noscript>
+src="https://web.archive.org/20011101000000/http://y1.extreme-dm.com/z/?tag=sonicheq&j=n"></noscript>
 </td></tr></table></center>
 
 <p>Keeping in tune with adding something major to SHQ everyday until the 11th - this is WB with SURPRISE #2! You've begged, you've pleaded, you've flooded our mailbox and threatened our lives to NO END telling us repeatedly - but guess what we have? >;O)
 
 <p>Conratulate Sonic HQ staff member Shayne "Sierra Ranay" Thames for being the QUEEN of Cartoons! Ladies and gents the Sonic SatAM Cartoon Downloads - ALL 26 - are up and running! But wait - theres more! Act now and you get a special bonus of 40 Sonic Undergound Cartoon Files - Including some High Quality ones JUST FOR FREE ! But we couldnt let an offer like that just go by itself - so added along WITH THAT is a link to www.sonicunderground.net where you can download some of the SU Music Videos as well!!! Now - say it with me. Who's the lady calling the cartoon shots around here? Sierra Ranay!!!! Click 
-<a href="http://www.emulationzone.org/sonichq/cartoon/SatAM/downloads.html">here for the toons</a>!
+<a href="cartoon/SatAM/downloads.html">here for the toons</a>!
 
-<p>And dont forget Surprise #1 - <a href="http://www.emulationzone.org/sonichq/images/downloads/desktop.shtml">The Sonic Theme Pack!</a>  Check it out in the downloads page - a theme pack, compiled by Vector, that includes themes for Sonic, Tails, Knuckles, Vector, Mighty, and 2 games.
+<p>And dont forget Surprise #1 - <a href="images/downloads/desktop.shtml">The Sonic Theme Pack!</a>  Check it out in the downloads page - a theme pack, compiled by Vector, that includes themes for Sonic, Tails, Knuckles, Vector, Mighty, and 2 games.
 
 <p>Here's another hint for our numerous "11th secrets" BTW - Interactivity and you...
 
@@ -281,7 +281,7 @@ src="http://y1.extreme-dm.com/z/?tag=sonicheq&j=n"></noscript>
 <br>Vector and The Dubba Dubba WB !!! 
 
 
-<p><a href="http://www.emulationzone.org/" target="_blank" width=179 height=24><img src="logo1.gif" border=0></a>
+<p><a href="https://web.archive.org/20011101000000/http://www.emulationzone.org/" target="_blank" width=179 height=24><img src="logo1.gif" border=0></a>
 
 <p><a href="main/updateboard.htm" width=179 height=24><img src="logo2.jpg" border=0></a>
 
@@ -289,28 +289,28 @@ src="http://y1.extreme-dm.com/z/?tag=sonicheq&j=n"></noscript>
 
 <p><a href="dir/webrings.htm" width=179 height=24><img src="webrings.jpg" border=0></a>
 
-<FORM ACTION="http://freefind.com/servlet/freefind" METHOD="GET">
+<FORM ACTION="https://web.archive.org/20011101000000/http://freefind.com/servlet/freefind" METHOD="GET">
 <INPUT TYPE="HIDDEN" NAME="id" SIZE="-1" VALUE="2826175">
 <INPUT TYPE="HIDDEN" NAME="pageid" SIZE="-1" VALUE="r">
 <INPUT TYPE="HIDDEN" NAME="mode" SIZE="-1" VALUE="ALL">
 
-<p><a href="http://freefind.com/servlet/freefind?id=2826175"><img src="logo3.jpg" border=0 width=179 height=24></a>
+<p><a href="https://web.archive.org/20011101000000/http://freefind.com/servlet/freefind?id=2826175"><img src="logo3.jpg" border=0 width=179 height=24></a>
 <br>
 <INPUT TYPE="TEXT" NAME="query" SIZE="24">
 <br>
-<small><INPUT TYPE="SUBMIT" VALUE="Find" align=left></small><font face="Arial" color=FFFFFF size=-1>&nbsp &nbsp &nbsp;powered by <A HREF="http://www.freefind.com"><font color=C0C0C0>FreeFind</font></A></font>
+<small><INPUT TYPE="SUBMIT" VALUE="Find" align=left></small><font face="Arial" color=FFFFFF size=-1>&nbsp &nbsp &nbsp;powered by <A HREF="https://web.archive.org/20011101000000/http://www.freefind.com"><font color=C0C0C0>FreeFind</font></A></font>
 </FORM>
 
-<p><A HREF="http://www.topsitelists.com/games/sth/topsites.cgi?ID=30" target="_whole"><font color=C0C0C0>Vote for me in the Top 50 Sonic Sites!</font></A>
+<p><A HREF="https://web.archive.org/20011101000000/http://www.topsitelists.com/games/sth/topsites.cgi?ID=30" target="_whole"><font color=C0C0C0>Vote for me in the Top 50 Sonic Sites!</font></A>
 
-<center><p><a href="http://www.alladvantage.com/go.asp?refid=GKX618" target="_whole">
+<center><p><a href="https://web.archive.org/20011101000000/http://www.alladvantage.com/go.asp?refid=GKX618" target="_whole">
 <img src="alladvantage.gif" border=0 alt="Join AllAdvantage.com"><br></a>
 Please Join AllAdvatage and get paid to surf!  Link opens in a new window.
 </a></center>
 
 <center>
-<p><a href=http://www.Lpage.com/wgb/wgbsign.dbm?owner=zifei border=0><font color=C0C0C0>Sign Guestbook<!IMG SRC=sign.jpg border=0></font></a><br>
-<a href=http://www.Lpage.com/wgb/wgbview.dbm?owner=zifei border=0><font color=C0C0C0>View Guestbook<!IMG SRC=view.jpg border=0></font></a><br>
+<p><a href=https://web.archive.org/20011101000000/http://www.Lpage.com/wgb/wgbsign.dbm?owner=zifei border=0><font color=C0C0C0>Sign Guestbook<!IMG SRC=sign.jpg border=0></font></a><br>
+<a href=https://web.archive.org/20011101000000/http://www.Lpage.com/wgb/wgbview.dbm?owner=zifei border=0><font color=C0C0C0>View Guestbook<!IMG SRC=view.jpg border=0></font></a><br>
 </center>
 
 </font></td></tr>
