--- a/sonichq/main/index2.htm
+++ b/sonichq/main/index2.htm
@@ -27,18 +27,18 @@ scrollbar-arrow-color: #B0FFFF}
   <table border="0" cellpadding="0" cellspacing="0">
     <tr>
       <td> 
-        <div align="center"><a href="http://www.sonichq.org/main.htm"><img src="sonichq.jpg" width="200" height="200" border="0" alt="Sonic The Hedgehog"></a></div>
+        <div align="center"><a href="main.htm"><img src="sonichq.jpg" width="200" height="200" border="0" alt="Sonic The Hedgehog"></a></div>
       </td>
       <td>
         <div align="center"><font face="arial" size="2">Welcome to Sonic HQ <br>
           <br>
-          <a href=http://www.sonichq.org/main.htm>Sonic HQ Standard</a> <br>
+          <a href=main.htm>Sonic HQ Standard</a> <br>
           <br>
           Want an optional navigation frame?<br>
           <a href=frames.cgi>Random</a> | <a href=frames1.html>1</a> | <a href=frames2.html>2</a> 
           | <a href=frames3.html>3</a> | <a href=frames4.html>4</a> <br>
           <br>
-          <a href=main/email.htm target="_blank">Free E-mail</a> | <a href="http://www.topsitelists.com/games/sth/topsites.cgi?ID=30" target="_blank">Vote 
+          <a href=main/email.htm target="_blank">Free E-mail</a> | <a href="https://web.archive.org/20011101000000/http://www.topsitelists.com/games/sth/topsites.cgi?ID=30" target="_blank">Vote 
           For Us In The Top 50 Sonic sites!</a> <br>
           Best viewed with Internet Explorer 4+<br>
 800x600 or higher Resolution</font></div>
@@ -50,10 +50,10 @@ scrollbar-arrow-color: #B0FFFF}
           -<br>
           a new site featuring the Blue Bomber! <br>
           <br>
-          <a href=http://www.sonichq.org/megaman>Mega Man HQ</a></font></div>
+          <a href=sonichq/main/megaman>Mega Man HQ</a></font></div>
       </td>
       <td> 
-        <div align="center"><a href="http://www.sonichq.org/megaman"><img src="megamanhq.jpg" width="200" height="200" border="0" alt="Mega Man/Rockman"></a></div>
+        <div align="center"><a href="sonichq/main/megaman"><img src="megamanhq.jpg" width="200" height="200" border="0" alt="Mega Man/Rockman"></a></div>
       </td>
     </tr>
     <tr>
@@ -70,14 +70,14 @@ scrollbar-arrow-color: #B0FFFF}
   <font face="arial" size="2">
   <table width="20%" border="0" cellpadding="1" cellspacing="1">
     <tr> 
-      <td><a href="http://www.classicgaming.com/tmk/" target="_blank"><img src="http://www.classicgaming.com/tmk/button2.gif" width="88" height="31" align="left" border="0"></td>
-<td><a href="http://www.sonicfoundation.org" target="_blank"><img src="http://www.sonicfoundation.org/images/tsftailsbutton.gif" width="88" height="31" align="left" border="0"></td>
-<td><a href="http://www.teamartail.com" target="_blank"><img src="http://www.teamartail.com/link/88-ta.gif" width="88" height="31" align="left" border="0"></td>
-<td><a href="http://www.burleehost.net/lostartists" target="_blank"><img src="http://www.burleehost.net/lostartists/ss/addourlink/tlabutton.jpg" width="88" height="31" align="left" border="0"></a></td>
-<td><a href="http://www.sonicunderground.net" target="_blank"><img src="subutton.gif" width="88" height="31" align="left" border="0"></td>
+      <td><a href="https://web.archive.org/20011101000000/http://www.classicgaming.com/tmk/" target="_blank"><img src="https://web.archive.org/20011101000000/http://www.classicgaming.com/tmk/button2.gif" width="88" height="31" align="left" border="0"></td>
+<td><a href="https://web.archive.org/20011101000000/http://www.sonicfoundation.org" target="_blank"><img src="https://web.archive.org/20011101000000/http://www.sonicfoundation.org/images/tsftailsbutton.gif" width="88" height="31" align="left" border="0"></td>
+<td><a href="https://web.archive.org/20011101000000/http://www.teamartail.com" target="_blank"><img src="https://web.archive.org/20011101000000/http://www.teamartail.com/link/88-ta.gif" width="88" height="31" align="left" border="0"></td>
+<td><a href="https://web.archive.org/20011101000000/http://www.burleehost.net/lostartists" target="_blank"><img src="https://web.archive.org/20011101000000/http://www.burleehost.net/lostartists/ss/addourlink/tlabutton.jpg" width="88" height="31" align="left" border="0"></a></td>
+<td><a href="https://web.archive.org/20011101000000/http://www.sonicunderground.net" target="_blank"><img src="subutton.gif" width="88" height="31" align="left" border="0"></td>
     </tr>
   </table>
-<font size="-2" face="arial"><u>Legal Disclaimer:</u> <br>Sonic The Hedgehog and all related characters/intellectual property are owned and © <a href=http://www.sega.com target=_blank>Service Games (SEGA)</a>, <a href=http://www.sonicteam.com target=_blank>Sonic Team</a>, <a href=http://www.archiecomics.com target=_blank>Archie Comics</a>, <a href=http://www.dicentertainment.com target=_blank>DiC Enterprises</a>, and/or Egmont Fleetway Inc.. Mega Man &amp; Co. are © <a href=http://www.capcom.com target=_blank>Capcom</a>. Sonic & Megaman HQ are a fan run information, news, and reviews site specializing in Sonic Team games and related products and are not related to any of these companies. Page design © Sonic HQ 1996-2001.
+<font size="-2" face="arial"><u>Legal Disclaimer:</u> <br>Sonic The Hedgehog and all related characters/intellectual property are owned and © <a href=https://web.archive.org/20011101000000/http://www.sega.com target=_blank>Service Games (SEGA)</a>, <a href=/japan/sonicteam target=_blank>Sonic Team</a>, <a href=https://web.archive.org/20011101000000/http://www.archiecomics.com target=_blank>Archie Comics</a>, <a href=https://web.archive.org/20011101000000/http://www.dicentertainment.com target=_blank>DiC Enterprises</a>, and/or Egmont Fleetway Inc.. Mega Man &amp; Co. are © <a href=https://web.archive.org/20011101000000/http://www.capcom.com target=_blank>Capcom</a>. Sonic & Megaman HQ are a fan run information, news, and reviews site specializing in Sonic Team games and related products and are not related to any of these companies. Page design © Sonic HQ 1996-2001.
 </center></font></font>
 
 </body></html>
